--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "recharts": "^3.7.0",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.563.0",
-    "@google/genai": "^1.38.0"
+    "@google/genai": "^1.38.0",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
